Player covering bottom song bug fix

--- a/src/views/Album/Album.module.scss
+++ b/src/views/Album/Album.module.scss
@@ -6,6 +6,7 @@ $row-duration: 0.12;
   overflow-y: scroll;
   background-color: rgb(32, 32, 32);
   height: 100vh;
+  padding-bottom: 10rem;
 
   .songs-container {
     background-color: rgb(32, 32, 32);
